<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hemat_pangkal_kaya"
        android:textSize="30sp"
        android:textColor="@color/md_black_1000"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_margin="32dp"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img_home"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_text"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_nabung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayo_menabung"
        android:textAllCaps="false"
        android:paddingHorizontal="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        style="@style/ButtonPrimary"/>



</LinearLayout>