<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        app:elevation="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_arrow_back_black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayo_menabung"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_toEndOf="@id/iv_back"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="170dp"
                android:src="@drawable/img_tabung"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabung_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/jumlah_uang"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"/>

            <EditText
                android:id="@+id/edt_jumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/jumlah_uang"
                android:textSize="16sp"
                android:background="@drawable/bg_line_solid_grey"
                android:paddingVertical="12dp"
                android:paddingHorizontal="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/catatan_menabung"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"/>

            <EditText
                android:id="@+id/edt_catatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/catatan_menabung"
                android:textSize="16sp"
                android:background="@drawable/bg_line_solid_grey"
                android:paddingVertical="12dp"
                android:paddingHorizontal="16dp"
                android:minLines="5"
                android:gravity="top"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_simpan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/simpan"
                    android:textAllCaps="false"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="16dp"
                    style="@style/ButtonPrimary"/>
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>